--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
             <th>Quantidade</th>
         </tr>
         <tr>
-        <td>Carro</td>
+        <td>manguito rosa</td>
         <td>30</td>
         </tr>
         <tr>
-            <td>Outlaw</td>
+            <td>joelheira</td>
             <td>1</td>
         </tr>
     </table>
@@ -30,7 +30,7 @@
 <table border="1" width="300px">
     <tr>
         <th>Produtos</th>
-        <th>RTX 3060</th>
+        <th>Bola de praia</th>
     </tr>
     <tr>
     <td>QUANTIDADE</td>
@@ -45,18 +45,18 @@
 <body>
 <table border="1" width="300px">
     <tr>
-        <th colspan="2" rowspan=" ">Penny's shop</th>
+        <th colspan="2" rowspan=" ">Volley´s skills</th>
     </tr>
     <tr>
         <th>Produtos</th>
         <th>Quantidade</th>
     </tr>
     <tr>
-    <td>Carro velho</td>
+    <td>mikasa</td>
     <td>3</td>
     </tr>
     <tr>
-        <td>Operator</td>
+        <td>manguito</td>
         <td>12</td>
     </tr>
 </table>
