--- a/index.html
+++ b/index.html
@@ -83,19 +83,19 @@
         </tbody></table>
     <table border="1" width="350px">
         <tbody><tr>
-            <td>1</td>
+            <td>Volkswagen</td>
             <td>2</td>
             <td>3</td>
             <td>4</td>
         </tr>
         <tr>
-            <td>5</td>
+            <td>Fiat</td>
             <td>6</td>
             <td>7</td>
             <td>8</td>
         </tr>
         <tr>
-            <td>9</td>
+            <td>Honda</td>
             <td>10</td>
             <td>11</td>
             <td>12</td>
