--- a/index.html
+++ b/index.html
@@ -84,19 +84,19 @@
     <table border="1" width="350px">
         <tbody><tr>
             <td>Volkswagen</td>
-            <td>2</td>
+            <td>Golf</td>
             <td>3</td>
             <td>4</td>
         </tr>
         <tr>
             <td>Fiat</td>
-            <td>6</td>
+            <td>Palio</td>
             <td>7</td>
             <td>8</td>
         </tr>
         <tr>
             <td>Honda</td>
-            <td>10</td>
+            <td>1Civic</td>
             <td>11</td>
             <td>12</td>
         </tr>
