--- a/index.html
+++ b/index.html
@@ -85,19 +85,19 @@
         <tbody><tr>
             <td>Volkswagen</td>
             <td>Golf</td>
-            <td>3</td>
+            <td>2009</td>
             <td>4</td>
         </tr>
         <tr>
             <td>Fiat</td>
             <td>Palio</td>
-            <td>7</td>
+            <td>2010</td>
             <td>8</td>
         </tr>
         <tr>
             <td>Honda</td>
-            <td>1Civic</td>
-            <td>11</td>
+            <td>Civic</td>
+            <td>2012</td>
             <td>12</td>
         </tr>
     </tbody></table>
