--- a/index.html
+++ b/index.html
@@ -83,6 +83,9 @@
         </tbody></table>
     <table border="1" width="350px">
         <tbody><tr>
+            <th>Quantidade</th>
+    </tr>
+    <tr>
             <td>Volkswagen</td>
             <td>Golf</td>
             <td>2009</td>
