--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
         </tbody></table>
     <table border="1" width="350px">
         <tbody><tr>
-            <th>Quantidade</th>
+            <th>Marca</th>
     </tr>
     <tr>
             <td>Volkswagen</td>
