--- a/index.html
+++ b/index.html
@@ -85,6 +85,12 @@
         <tbody><tr>
             <th>Marca</th>
             <th>Modelo</th>
+            <th>Ano</th>
+            <th>Valor</th>
+    </tr>
+    <tr>
+    </tr>
+    <tr>
     </tr>
     <tr>
     </tr>
