--- a/index.html
+++ b/index.html
@@ -1,4 +1,6 @@
 
+        </tbody></table>
+    <table border="1" width="350px">
         <tbody><tr>
             <th>Marca</th>
             <th>Modelo</th>
