--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 
         </tbody></table>
     <table border="1" width="350px">
-        <tbody><tr>
+        <tbody>
             <th>Marca</th>
             <th>Modelo</th>
             <th>Ano</th>
