--- a/index.html
+++ b/index.html
@@ -31,4 +31,5 @@
             <td>2012</td>
             <td>R$61.500</td>
         </tr>
+        <tr>O melhor preço da região</tr>
     </tbody></table>
