--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
             <td>Civic</td>
             <td>2012</td>
             <td>R$61.500</td>
+            <td>O melhor preço da região</td>
         </tr>
         <tr>O melhor preço da região</tr>
     </tbody></table>
