--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
             <th>Modelo</th>
             <th>Ano</th>
             <th>Valor</th>
+            <th>O melhor preço da região</th>
     </tr>
     <tr>
     </tr>
@@ -30,7 +31,7 @@
             <td>Civic</td>
             <td>2012</td>
             <td>R$61.500</td>
-            <td>O melhor preço da região</td>
+            
         </tr>
-        <tr>O melhor preço da região</tr>
+    
     </tbody></table>
