--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
             <th>Modelo</th>
             <th>Ano</th>
             <th>Valor</th>
-            <th>O melhor preço da região</th>
+            
     </tr>
     <tr>
     </tr>
@@ -28,6 +28,7 @@
         </tr>
         <tr>
             <td>Honda</td>
+            <td>O melhor</td>
             <td>Civic</td>
             <td>2012</td>
             <td>R$61.500</td>
