--- a/index.html
+++ b/index.html
@@ -30,6 +30,8 @@
 
 
         </tr>
+        <tr>O melhor preço da região.
+            
+        </tr>
     </tbody>
-    <tr>O melhor preço da região.</tr>
 </table>
