--- a/index.html
+++ b/index.html
@@ -30,8 +30,6 @@
 
 
         </tr>
-        <tr>O melhor preço da região.
-            
-        </tr>
+       <tr><td>O melhor preço da região.</td></tr>
     </tbody>
 </table>
