--- a/index.html
+++ b/index.html
@@ -8,8 +8,6 @@
         <th>Ano</th>
         <th>Valor</th>
 
-        </tr>
-
         <tr>
             <td>Volkswagen</td>
             <td>Golf</td>
@@ -30,6 +28,6 @@
 
 
         </tr>
-       <tr><td>O melhor preço da região.</td></tr>
+       <tr <td align='end'O melhor preço da região./td>/tr>
     </tbody>
 </table>
