--- a/index.html
+++ b/index.html
@@ -28,6 +28,6 @@
 
 
         </tr>
-       <tr <td align='end'O melhor preço da região./td>/tr>
+       <tr><td>O melhor preço da região.</td></tr> 
     </tbody>
 </table>
