--- a/index.html
+++ b/index.html
@@ -28,6 +28,8 @@
 
 
         </tr>
-       <tr><td>O melhor preço da região.</td></tr> 
+       <tr>
+        <td colspan="5">O melhor preço da região</td>
+    </tr> 
     </tbody>
 </table>
