--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
 
         </tr>
-       <tr>
+       <tr align="end">
         <td colspan="4">O melhor preço da região</td>
     </tr> 
     </tbody>
